# fastapi-demo

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  nginx.conf  noxfile.py  pyproject.toml  pytest.ini
.github/workflows/: test.yml
app/: app.py  celery_worker.py  config.py  db.py  logger.py  tasks.py  telemetry.py
app/doamin/services/: UserService.py
app/domain/: ApprovalModel.py  AuthorityModel.py  ChatModel.py  EmployeeCsvImportModel.py  EmployeeModel.py  KafkaModel.py  LoginRecordModel.py  MQTTModel.py  MessageModel.py  SSOModel.py  ScheduleModel.py  UserModel.py
app/domain/services/: AuthenticationService.py  __init__.py
app/exceptions/: ApprovalException.py  BaseException.py  ChatException.py  EmployeeException.py  FileException.py  KafkaException.py  MQTTException.py  MessageException.py  SSOException.py  ScheduleException.py  UserException.py  WorkflowExcedption.py
app/infrastructure/: cache.py
app/repositories/: BaseRepository.py  UserRepository.py
app/repositories/sqlalchemy/: ApprovalRepository.py  BaseRepository.py  ChatRepository.py  EmployeeRepository.py  KafkaRepository.py  LoginRecordRepository.py  MQTTRepository.py  MessageRepository.py  SSORepository.py  ScheduleRepository.py  UserRepository.py  WorkflowRepository.py
app/router/: ApprovalRouter.py  ChatRouter.py  EmployeeRouter.py  HRChatRouter.py  KafkaRouter.py  MQTTRouter.py  MessageRouter.py  OAuthRouter.py  SSORouter.py  ScheduleRouter.py  SessionRouter.py  TasksRouter.py  UserRouter.py  WorkFlowRouter.py  __init__.py
app/router/dependencies/: auth.py
app/router/schemas/: ApprovalSchema.py  ChatSchema.py  EmployeeSchema.py  EnumSchema.py  KafkaSchema.py  MQTTSchema.py  MessageSchema.py  OAuthSchema.py  SSOSchema.py  ScheduleSchema.py  SessionSchema.py  TaskSchema.py  UserModel.py  UserSchema.py  WorkflowSchema.py
app/services/: ApprovalAgentService.py  ApprovalNotificationPublisher.py  ApprovalService.py  AuthService.py  BackgroundTaskPublisher.py  EmailService.py  EmployeeService.py  FileReadService.py  FileUploadService.py  GitHubOAuthService.py  GoogleCalendarService.py  GoogleOAuthService.py  KafkaClientManager.py  KafkaService.py  LINEService.py  LoginRecordService.py  MQTTClientManager.py  MQTTService.py  MQTTSummaryService.py  MessageService.py  OllamaClient.py  SSOAdminService.py  SSOService.py  ScheduleAgentService.py  ScheduleService.py  UnitOfWork.py  UserService.py  WorkflowService.py
app/services/unitofwork/: ApprovalUnitOfWork.py  AssignEmployeeUnitOfWork.py  ChatUnitOfWork.py  EmployeeUnitOfWork.py  KafkaUnitOfWork.py  LoginRecordUnitOfWork.py  MQTTUnitOfWork.py  MessageUnitOfWork.py  SSOUnitOfWork.py  ScheduleUnitOfWork.py  UserUnitOfWork.py  WorkflowUnitOfWork.py  base.py
app/tasks/: __init__.py  add_tasks.py  employee_tasks.py  line_notification_tasks.py  mqtt_summary_tasks.py
app/utils/: auth.py  password.py  password_hasher.py  token_generator.py
app/utils/file_reader/: file_reader.py
database/alembic/: env.py
database/alembic/versions/: 01ce1a251126_add_schedules_and_google_calendar_.py  0953c35cbb9d_add_empolyees_table.py  11b7cc5d2c87_add_google_id_to_users.py  25223b345e6a_add_role_to_empolyees_relationship_1_to_.py  36bdb07f5222_add_users_table.py  41994c6ecff0_add_github_id_to_users.py  471c16500cce_add_profiles_table.py  499dc0682db6_add_roles_table.py  4b9d13321fdc_add_users_table.py  51ff61910918_add_conversations_and_chat_messages_.py  544f4b748679_add_email_verified_to_users.py  6a776c8f930f_update_pwd_column_length_to_128.py  75e2fa53d9d0_add_roles_to_authorities_relationship_m_.py  7b31cfd33080_add_kafka_messages_table.py  a3b2c1d4e5f6_add_sso_tables.py  a684e2ee76f5_add_line_user_id_to_users.py  b7e3f2a1c9d8_add_unique_constraint_to_users_email.py  b84748caa10b_add_login_records_table.py  b8700b70b7f1_add_approval_requests_and_approval_.py  b99b881f9bc8_add_messages_table.py  c7f7a07503d8_add_users_table.py  cbd89f4070f4_add_account_type_column_to_users_table.py  cf510956f969_add_authorities_table.py  d1ed4b22b012_add_profiles_table.py  d30dccaa1022_add_avatar_to_profiles.py  d41897ff4543_extend_email_column_length.py  d918c6084f39_add_profiles_table.py  e9afe6eb2868_add_mqtt_messages_table.py  f6116694fcba_add_user_id_to_employees.py
database/models/: __init__.py  approval.py  association.py  authority.py  chat.py  employee.py  kafka.py  login_record.py  message.py  mqtt.py  role.py  schedule.py  sso.py  user.py  workflow.py
nginx/: nginx.conf
nginx/conf.d/: app.conf
prisma/: schema.prisma  seed.py
scripts/: kafka.sh  minio.sh  mosquitto.sh  redis.sh  seed.py  start-dev.py  start_dev.py
template/: dev.env
tests/: conftest.py
tests/e2e/: conftest.py  test_approval_lifecycle.py  test_employee_onboarding.py  test_messaging.py  test_user_lifecycle.py
tests/integration/: conftest.py  test_approval_flow.py  test_employee_csv_flow.py  test_employee_flow.py  test_hr_chat_flow.py  test_schedule_flow.py  test_sso_flow.py  test_tasks_flow.py  test_user_auth_flow.py  test_workflow_flow.py
tests/unit/: conftest.py  test_00_main.py  test_01_baserepository.py  test_02_usermodel.py
tests/unit/domain/: README.md  test_approval_domain.py  test_authority_domain.py  test_chat_domain.py  test_employee_csv_import_domain.py  test_employee_domain.py  test_login_record_domain.py  test_message_domain.py  test_mqtt_domain.py  test_schedule_domain.py  test_sso_domain.py  test_token_verification.py  test_user_domain.py  test_workflow_domain.py
tests/unit/repo/: conftest.py  test_approval_repository.py  test_chat_repository.py  test_employee_repository.py  test_kafka_repository.py  test_login_record_repository.py  test_message_repository.py  test_mqtt_repository.py  test_schedule_repository.py  test_sso_repository.py  test_user_repository.py
tests/unit/router/: conftest.py  test_approval_router.py  test_auth_dependencies.py  test_employee_router.py  test_kafka_router.py  test_message_router.py  test_mqtt_router.py  test_mqtt_summary_router.py  test_oauth_router.py  test_schedule_router.py  (+2 more)
(+32 files in other folders)
