[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Jhan <eletronicphysic0907@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
ipykernel = "^6.29.5"
pydantic = "^2.10.6"
email-validator = "^2.2.0"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
requests-mock = "^1.12.1"
loguru = "^0.7.3"
pandas = "^2.2.3"
celery = {extras = ["redis"], version = "^5.4.0"}
openpyxl = "^3.1.5"
python-multipart = "^0.0.20"
prisma = "^0.15.0"
bcrypt = "^4.3.0"
alembic = "^1.17.1"
pymysql = "^1.1.2"
pydantic-settings = "^2.11.0"
spiffworkflow = "^3.1.2"
duckdb = "^1.4.2"
cryptography = "^46.0.3"
fastapi-mail = "^1.6.1"
httpx = "^0.28.1"
boto3 = "^1.42.48"
paho-mqtt = "^2.1.0"
opentelemetry-api = "^1.39.1"
opentelemetry-sdk = "^1.39.1"
opentelemetry-exporter-otlp-proto-grpc = "^1.39.1"
opentelemetry-instrumentation-fastapi = "^0.60b1"
opentelemetry-instrumentation-sqlalchemy = "^0.60b1"
opentelemetry-instrumentation-httpx = "^0.60b1"
opentelemetry-instrumentation-celery = "^0.60b1"
opentelemetry-instrumentation-redis = "^0.60b1"
opentelemetry-instrumentation-logging = "^0.60b1"
aiokafka = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.26.0"
mimesis = "^18.0.0"

[tool.poetry.scripts]
dev = "scripts.start_dev:main"
db-head = "scripts.start_dev:db_upgrade_head"
db-base = "scripts.start_dev:db_downgrade_base"
db-init = "scripts.seed:main"
test = "scripts.start_dev:test"
nginx = "scripts.start_dev:run_nginx"
celery = "scripts.start_dev:run_celery"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning:passlib"]