[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Jhan <eletronicphysic0907@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
ipykernel = "^6.29.5"
pydantic = "^2.10.6"
email-validator = "^2.2.0"
pyjwt = "^2.10.1"
requests-mock = "^1.12.1"
loguru = "^0.7.3"
pandas = "^2.2.3"
celery = {extras = ["redis"], version = "^5.4.0"}
openpyxl = "^3.1.5"
python-multipart = "^0.0.20"
prisma = "^0.15.0"
bcrypt = "^4.3.0"
alembic = "^1.17.1"
pymysql = "^1.1.2"
pydantic-settings = "^2.11.0"
spiffworkflow = "^3.1.2"
duckdb = "^1.4.2"
cryptography = "^46.0.3"
fastapi-mail = "^1.6.1"
httpx = "^0.28.1"
boto3 = "^1.42.48"
paho-mqtt = "^2.1.0"
opentelemetry-api = "^1.39.1"
opentelemetry-sdk = "^1.39.1"
opentelemetry-exporter-otlp-proto-grpc = "^1.39.1"
opentelemetry-instrumentation-fastapi = "^0.60b1"
opentelemetry-instrumentation-sqlalchemy = "^0.60b1"
opentelemetry-instrumentation-httpx = "^0.60b1"
opentelemetry-instrumentation-celery = "^0.60b1"
opentelemetry-instrumentation-redis = "^0.60b1"
opentelemetry-instrumentation-logging = "^0.60b1"
aiokafka = "^0.13.0"
slowapi = "^0.1.9"
weasyprint = "^68.1"
qrcode = "^8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.26.0"
mimesis = "^18.0.0"
ruff = "^0.9.0"
mypy = "^1.14.0"
bandit = "^1.8.0"
pip-audit = "^2.7.0"

[tool.poetry.scripts]
dev = "scripts.start_dev:main"
db-head = "scripts.start_dev:db_upgrade_head"
db-base = "scripts.start_dev:db_downgrade_base"
db-init = "scripts.seed:main"
test = "scripts.start_dev:test"
test-cov = "scripts.start_dev:test_cov"
nginx = "scripts.start_dev:run_nginx"
celery = "scripts.start_dev:run_celery"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning:passlib"]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["database/alembic/versions", ".venv"]

[tool.ruff.lint]
# Conservative starting set; expand over time as the codebase is cleaned up.
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled by formatter; not worth gating initially
    "B008",  # function calls in argument defaults (FastAPI Depends/File pattern)
]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy column comparisons (`col == False` / `col == None`) build SQL
# expressions; the `is`/truthiness rewrites E711/E712 suggest would break them.
"app/repositories/sqlalchemy/*.py" = ["E711", "E712"]
# Star imports intentionally re-export every ORM model so Alembic autogenerate
# can discover them; keeping them out of __all__ is the whole point here.
"database/models/__init__.py" = ["F403", "F401"]
"database/alembic/env.py" = ["F403"]
# The Celery app must be constructed before its task modules are imported,
# so these module-level imports cannot sit at the top of the file.
"app/tasks/__init__.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
files = ["app"]
exclude = ["database/alembic", "tests"]
ignore_missing_imports = true
# `app` is a namespace package (no __init__.py); without these mypy sees each
# module under two names ("token_generator" and "app.token_generator") and aborts.
namespace_packages = true
explicit_package_bases = true
# Lenient initial config — tighten incrementally.
check_untyped_defs = false
disallow_untyped_defs = false
warn_unused_ignores = false

[tool.bandit]
exclude_dirs = ["tests", ".venv", "database/alembic"]